--- a/index.html
+++ b/index.html
@@ -6,58 +6,65 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <footer>
-        <div class="conteyner">
-            <div class="conteyner-img">
+    <div class="score clearfix">
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/1.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/2.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/3.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/4.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/5.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/6.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/7.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
             <p>Iphone 13 Pro MAX</p>
             <p>40356₴</p>
-        </div><div class="conteyner">
-            <div class="conteyner-img">
+        </div>
+        <div class="conteiner">
+            <div class="conteiner-img">
                 <img src="/img/8.webp" alt="Ноутбук">
             </div>
             <img class="icon" src="/img/icon/КОРЗИНА.jpg" alt="icon">
@@ -65,12 +72,12 @@
             <p>40356₴</p>
         </div>
         <div class="main">
-            <div>main</div>
+            <div>Lorem ipsum dolor sit amet consectetur.</div>
             <ul>
-                <li>One</li>
-                <li>Two</li>
-                <li>Three</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Lorem, ipsum dolor.</li>
             </ul>
         </div>
-    </footer>
+    </div>
 </body>
